[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelComponents/Triggers/TimerTrigger.gd" type="Script" id=1]

[node name="TimerTrigger" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
